Pao card fixed to be aligned with the rest of the cards

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -127,9 +127,7 @@ header {
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
-  padding: 20px;
 }
-
 
 .contenedor {
   width: 90%;
@@ -187,8 +185,6 @@ a {
 a:hover {
   text-decoration: underline;
 }
-
-
 
 @media (max-width: 768px) {
   .contenedor {
